testing gitpod making commit

--- a/testing_our.ipynb
+++ b/testing_our.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,13 +15,15 @@
     "# project_dir = pathlib.Path(__file__).parent.absolute()\n",
     "\n",
     "# paths to data dirs\n",
-    "lc_train_path = \"/home/dsvm113/IdeaProjects/workspace/data_1/training_set/noisy_train/\"\n",
-    "params_train_path = \"/home/dsvm113/IdeaProjects/workspace/data_1/training_set/params_train/\""
+    "# lc_train_path = \"/home/dsvm113/IdeaProjects/workspace/data_1/training_set/noisy_train/\"\n",
+    "# params_train_path = \"/home/dsvm113/IdeaProjects/workspace/data_1/training_set/params_train/\"\n",
+    "lc_train_path = \"./data/noisy_train/\"\n",
+    "params_train_path = \"./data/params_train/\""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -30,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -54,16 +56,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
+     "output_type": "execute_result",
      "data": {
-      "text/plain": "[4880.0, 4.5, 0.73, 0.77, 9.688, 6.67202]"
+      "text/plain": [
+       "[4880.0, 4.5, 0.73, 0.77, 9.688, 6.67202]"
+      ]
      },
-     "execution_count": 8,
      "metadata": {},
-     "output_type": "execute_result"
+     "execution_count": 7
     }
    ],
    "source": [
@@ -72,16 +76,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
+     "output_type": "execute_result",
      "data": {
-      "text/plain": "[4880.0, 0.73, 0.77, 9.688, 6.67202]"
+      "text/plain": [
+       "[4880.0, 0.73, 0.77, 9.688, 6.67202]"
+      ]
      },
-     "execution_count": 9,
      "metadata": {},
-     "output_type": "execute_result"
+     "execution_count": 8
     }
    ],
    "source": [
@@ -91,16 +97,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
+     "output_type": "execute_result",
      "data": {
-      "text/plain": "[4880.0, 0, 0.77, 9.688, 6.67202]"
+      "text/plain": [
+       "[4880.0, 0, 0.77, 9.688, 6.67202]"
+      ]
      },
-     "execution_count": 10,
      "metadata": {},
-     "output_type": "execute_result"
+     "execution_count": 9
     }
    ],
    "source": [
@@ -112,16 +120,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
+     "output_type": "execute_result",
      "data": {
-      "text/plain": "array([4.88000e+03, 0.00000e+00, 7.70000e-01, 9.68800e+00, 6.67202e+00])"
+      "text/plain": [
+       "array([4.88000e+03, 0.00000e+00, 7.70000e-01, 9.68800e+00, 6.67202e+00])"
+      ]
      },
-     "execution_count": 11,
      "metadata": {},
-     "output_type": "execute_result"
+     "execution_count": 10
     }
    ],
    "source": [
@@ -131,16 +141,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
+     "output_type": "execute_result",
      "data": {
-      "text/plain": "array([4.88000e+03, 0.00000e+00, 7.70000e-01, 9.68800e+00, 6.67202e+00])"
+      "text/plain": [
+       "array([4.88000e+03, 0.00000e+00, 7.70000e-01, 9.68800e+00, 6.67202e+00])"
+      ]
      },
-     "execution_count": 13,
      "metadata": {},
-     "output_type": "execute_result"
+     "execution_count": 11
     }
    ],
    "source": [
@@ -149,16 +161,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
+     "output_type": "execute_result",
      "data": {
-      "text/plain": "BaselineConv(\n  (layer1): Conv1d(5561, 1024, kernel_size=(5,), stride=(2,))\n  (act1): ReLU()\n  (layer2): Conv1d(1024, 55, kernel_size=(1,), stride=(1,))\n)"
+      "text/plain": [
+       "BaselineConv(\n",
+       "  (layer1): Conv1d(16505, 1024, kernel_size=(1,), stride=(2,))\n",
+       "  (act1): ReLU()\n",
+       "  (layer2): Conv1d(1024, 256, kernel_size=(1,), stride=(1,))\n",
+       "  (act2): ReLU()\n",
+       "  (layer3): Linear(in_features=256, out_features=55, bias=True)\n",
+       ")"
+      ]
      },
-     "execution_count": 1,
      "metadata": {},
-     "output_type": "execute_result"
+     "execution_count": 12
     }
    ],
    "source": [
@@ -185,8 +205,8 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.7.9 64-bit ('py37_pytorch': conda)",
-   "name": "python379jvsc74a57bd0b5079757533a07d523b22964b5bda6a42550d36e9c94eb5f662e38c34376cbf3"
+   "display_name": "Python 3.8.10 64-bit ('3.8.10')",
+   "name": "python381064bit3810b75c14471060437fb07efb1eb7221c37"
   },
   "language_info": {
    "codemirror_mode": {
@@ -198,7 +218,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.9"
+   "version": "3.8.10-final"
   },
   "orig_nbformat": 3
  },
