--- a/XGBoost.ipynb
+++ b/XGBoost.ipynb
@@ -35,7 +35,7 @@
     "\n",
     "And it's a plus if the number of features is far less than the number of training samples. We can drop features as well later during training randomly. \n",
     "\n",
-    "However, since we are not familiar with XGBoost, and we have lots of features, tuning it is something of a requirement due to inexperience. "
+    "However, since we are not familiar with XGBoost, and we have lots of features, tuning it is something of a requirement due to inexperience. We would do bayesian optimization for ourselves. Even though wandb offers pre-configured and easily sent job, we could learn more by implementing ourselves plus I have no idea how to retrieve best parameters from Weights and Biases. "
    ],
    "cell_type": "markdown",
    "metadata": {}
@@ -63,7 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -76,7 +76,7 @@
     "\n",
     "import xgboost as xgb \n",
     "from bayes_opt import BayesianOptimization\n",
-    "from sklearn.model_selection import cross_val_score\n",
+    "from sklearn.model_selection import cross_val_score, train_test_split\n",
     "\n",
     "import tensorflow as tf \n",
     "\n",
@@ -86,7 +86,11 @@
   },
   {
    "source": [
-    "The Bayesian Optimization technique had been taken from https://www.kdnuggets.com/2019/07/xgboost-random-forest-bayesian-optimisation.html"
+    "Examples taken from https://github.com/fmfn/BayesianOptimization/blob/master/examples/sklearn_example.py and https://www.kdnuggets.com/2019/07/xgboost-random-forest-bayesian-optimisation.html\n",
+    "\n",
+    "If you look at their examples you'll find that they only have the function maximize, nothing on minimize. This means if we use RMSE or something we would not get something useful. Hence, there are two ways that could be think of. One, implement the Ariel Score as we want to maximize that. Second, use \"negative (root) mean squared error\". This way, it could be maximize as well. \n",
+    "\n",
+    "After deciding, `neg_mean_squared_error` would be a good choice. "
    ],
    "cell_type": "markdown",
    "metadata": {}
@@ -97,8 +101,26 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def bayesian_optimization(dataset, function, parameters):\n",
-    "    "
+    "def bayesian_optimization(dataset, function, parameters, target=\"label\", n_iter=10, init_points=3):\n",
+    "    \"\"\"\n",
+    "    Bayesian Optimization Algorithm. \n",
+    "\n",
+    "    Parameters:\n",
+    "    :var dataset: (Pandas.DataFrame) A Pandas DataFrame of our used dataset. \n",
+    "    :var function: (Python Function) Function containing our model to optimize on. \n",
+    "    :var parameters: (Python Dict) The dictionary containing the parameters (or its range) to\n",
+    "            optimize on. \n",
+    "    :var target: (str) The column name of the target. Default to \"label\". \n",
+    "    :var n_iter: (int) How many steps of Bayesian Optimization to go through. The more steps the\n",
+    "            more likely to find a good maximum. \n",
+    "    :var init_points: (int) How many steps of random exploration to perform. Random exploration\n",
+    "            can help in diversifying the exploration space. \n",
+    "    :var **kwargs: other BayesianOptimization.maximize() parameters. \n",
+    "    \"\"\"\n",
+    "    y = dataset.pop(target)\n",
+    "    X = dataset\n",
+    "\n",
+    "    X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.05)"
    ]
   }
  ]
