--- a/XGBoost.ipynb
+++ b/XGBoost.ipynb
@@ -1702,9 +1702,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 78,
    "metadata": {},
    "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "CPU times: user 18 µs, sys: 0 ns, total: 18 µs\nWall time: 23.4 µs\n"
+     ]
+    },
     {
      "output_type": "execute_result",
      "data": {
@@ -1713,7 +1720,7 @@
       ]
      },
      "metadata": {},
-     "execution_count": 66
+     "execution_count": 78
     }
    ],
    "source": [
@@ -1759,6 +1766,13 @@
     "\n",
     "test_np, best_target_score, memory_loc = preprocessing(test_np)"
    ]
+  },
+  {
+   "source": [
+    "The cell below have not been updated and the for loop have not been taken out. Howver, basically, trying to run with the default parameter takes too long to return, hence it is abandoned. Even if it does better, the time it took does not worth training for. "
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
   },
   {
    "cell_type": "code",
@@ -1828,8 +1842,7 @@
     "    print(f\"Starting Table {table_num}.\\n\")\n",
     "\n",
     "    # Try first objective: We can skip best target score as we already computed it.\n",
-    "    kwargs = [test_np[table_num][\"params\"], test_np[memory_loc][\"params\"], \n",
-    "              {\"max_depth\": 15, \"n_estimators\": 25}]\n",
+    "    kwargs = [test_np[table_num][\"params\"], test_np[memory_loc][\"params\"]]\n",
     "    curr_best = test_np[table_num][\"target\"]\n",
     "    best = 0\n",
     "\n",
